garbage/listener-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener
  labels:
    app: listener
    service: listener
spec:
  type: NodePort
  ports:
  - port: 9080
    name: http
  selector:
    app: listener
---
