garbage/listener-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: listener-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 5000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: listener
spec:
  hosts:
  - "*"
  gateways:
  - listener-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static
    route:
    - destination:
        host: listener
        port:
          number: 8080
