garbage/pack2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
        - name: http-server
          image: mizmorr/hello_v2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  selector:
    app: http-server
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server
spec:
  backend:
    serviceName: http-server
    servicePort: 8080
  rules:
    - host: http-server.services.mizmorr.com
      http:
        paths:
          - backend:
              serviceName: http-server
              servicePort: 8080
